# tesis

./: .gitignore  CLAUDE.md  README.md  README_Data_Organization.md  README_Project_Structure.md  Solicitud_de_defensa_BenjaminSchindler.docx  TODO.md  ideas.md  pyproject.toml  requirements.txt  run_overnight_all.sh
Escrito_Tesis/: Metodologia.tex  citas.bib  generate_per_class_figure.py  main.tex
Escrito_Tesis_IEEE/: paper.tex  references.bib
Presentacion_Defensa/: README.md  compile.sh  figuras  main.tex
autoresearch/: run_experiment.py
core/: enhanced_quality_gate.py  focal_loss_training.py  mbti_confusers.py  runner_phase2.py  synthetic_quality_analyzer.py  two_stage_training.py
data/: Madrid_bert_embeddings_metadata.json  Madrid_llm_demo_metadata.json  Madrid_llm_generation_demo.pkl  Madrid_neutral_negative_sample.csv  Madrid_neutral_negative_sample.pkl  Madrid_smote_metadata.json  Madrid_synthetic_smote_samples.pkl
demo_replication/: README.md  run_demo.sh
docs/: 00_RESUMEN_EJECUTIVO.md  01_TECHNICAL_OVERVIEW.md  01_cross_contamination.md  01_macro_f1_evolution.md  01_pipeline_completo.md  02_PROBLEM_STATEMENT.md  02_parametros_justificados.md  02_per_class_analysis.md  02_seed_variance.md  03_high_f1_protection.md  03_mejoras_implementadas.md  03_tier_analysis.md  04_PARAMETER_DEEP_DIVE.md  04_estrategias_batches.md  04_mid_tier_vulnerability.md  04_statistical_validation.md  05_best_config.md  DEPLOYMENT_FINAL_STATUS.md  DEPLOYMENT_STATUS.md  GPU_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  NO_CLASS_SKIPPING_STRATEGY.md  PHASE_C_COMPLETED.md  README.md
(+690 files in other folders)
