[project]
name = "geometric-filters"
version = "0.1.0"
description = "Geometric filtering for LLM-based data augmentation"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "sentence-transformers>=3.0",
    "imbalanced-learn>=0.12",
    "scipy>=1.13",
    "torch>=2.4",
    "google-genai>=1.0",
    "python-dotenv>=1.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "openai>=2.24.0",
    "anthropic>=0.84.0",
]

[tool.uv]
dev-dependencies = []
